Fixed setup page bug, fixed password visibility size bug, added error catching for all pages when profile incorrectly setup

--- a/Site/static/css/style.css
+++ b/Site/static/css/style.css
@@ -152,8 +152,15 @@
 }
 #pwdCheck {
   font-size: 1vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: .25vw;
 }
 #pwdCheckbox{
+  height: 1vw;
+  width: 1vw;
   accent-color: var(--primary-colour);
   cursor: pointer;
 }
